src/snapshots/bevy_state_plugin_generator__tests__snapshots@enum_root_ab_Short_no_rustfmt.snap
---
source: src/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
[
    "Root -> Root",
    "A -> RootA",
    "B -> RootB",
]
