src/snapshots/bevy_state_plugin_generator__tests__snapshots@list_root_a_b_up_c_None_rustfmt.snap
---
source: src/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
[
    "Root -> Root",
    "A -> A",
    "C -> C",
    "B -> B",
]
