src/snapshots/bevy_state_plugin_generator__tests__snapshots@nested_example_Full_no_rustfmt.snap
---
source: src/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
[
    "Menu -> Menu",
    "Main -> MenuMain",
    "Options -> MenuOptions",
    "Game -> MenuGame",
    "Graphics -> MenuOptionsGraphics",
    "Audio -> MenuOptionsAudio",
    "Gameplay -> MenuOptionsGameplay",
    "Save -> MenuGameSave",
    "Load -> MenuGameLoad",
]
